--- a/ansible/roles/varnish/tasks/main.yml
+++ b/ansible/roles/varnish/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Update Repo
-  command: rpm --nosignature -i http://repo.varnish-cache.org/redhat/varnish-3.0/el6/noarch/varnish-release/varnish-release-3.0-1.el6.noarch.rpm
+  command: rpm --nosignature -i {{varnish_repository}}
 
 - name: Install Varnish
   yum: name=varnish state=latest
 
 - name: Auto start Varnish
-  command: chkconfig --levels 345 varnish on
+  command: systemctl enable varnish
   notify: restart varnish
