--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -8,6 +8,12 @@
 - name: Automatic load when boot
   command: systemctl enable nginx.service
 
+- name: Create Folder for fefault source
+  file: path=/srv/www/default state=directory owner=nginx group=nobody mode=0644
+
+- name: Copy index file for default folder
+  copy: src=index.php.j2 dest=/srv/www/default/index.php owner=nginx group=nginx mode=0644
+
 # - name: Copy Nginx Main configuration
 #   template: src=nginx.conf.j2 dest=/etc/nginx/nginx.conf mode=0644
 
